--- a/new.html
+++ b/new.html
@@ -1,20 +1,24 @@
-<h2> Form </h2>
+<!DOCTYPE html>
+<html>
+<body>
 
-<%= label_tag :email %>
-<%= text_field_tag :email %>
+<h2>HTML Forms</h2>
 
-<%= label_tag :first_name %>
-<%= text_field_tag :first_name %>
+<form action="/action_page.php">
+  <label for="fname">First name:</label><br>
+  <input type="text" id="fname" name="fname"><br>
+  <label for="lname">Last name:</label><br>
+  <input type="text" id="lname" name="lname" ><br><br>
+  <label for="email">Email:</label><br>
+  <input type="text" id="email" name="email" ><br><br>
+  <label for="phone">Phone Number:</label><br>
+  <input type="text" id="phone" name="phone" ><br><br>
+  <label for="address">Address:</label><br>
+  <input type="text" id="address" name="address" ><br><br>
+  <input type="submit" value="Submit">
+</form>
 
-<%= label_tag :last_name %>
-<%= text_field_tag :last_name %>
+<p>If you click the "Submit" button, the form-data will be sent to a page called "/action_page.php".</p>
 
-<%= label_tag :address %>
-<%= text_field_tag :address %>
-
-<%= label_tag :phone %>
-<%= text_field_tag :phone %>
-
-
-
-
+</body>
+</html>
